[package]
name = "rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
clap = {version = "4.4.1", features = ["derive"] }
deadpool-postgres = "0.12.1"
feed-rs = "1.3.0"
futures ="0.3.28"
postgres = "0.19.5"
reqwest = {version = "0.11.20", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = {version = "1.32.0", features = ["full"] }