[package]
name = "rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
clap = {version = "4.5.1", features = ["derive"] }
deadpool-postgres = "0.12.1"
feed-rs = "1.4.0"
futures ="0.3.30"
postgres = "0.19.7"
reqwest = {version = "0.11.24", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = {version = "1.36.0", features = ["full"] }