[package]
name = "rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
clap = {version = "4.5.20", features = ["derive"] }
deadpool-postgres = "0.14.0"
feed-rs = "2.1.1"
futures ="0.3.31"
postgres = "0.19.9"
reqwest = {version = "0.12.8", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = {version = "1.40.0", features = ["full"] }